<resources>

    <string name="app_name">Cipher Scavenger</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="scan">Scan</string>    
    <string name="view_message">View Your Message</string>
    <string name="prefs">Preferences</string>
    <string name="message_scanned">Message Scanned</string>
    <string name="level">Level</string>
    <string name="encoded">Encoded</string>
    <string name="decoded">You Decoded</string>
    <string name="parity">Parity</string>
    <string name="success">Success</string>

</resources>