<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/orange_button"
        android:padding="10dp"
        android:text="@string/scan" />    

    <Button
        android:id="@+id/btn_view"
        android:layout_below="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/orange_button"
        android:padding="10dp"
        android:text="@string/view_message" />

    <Button
        android:id="@+id/btn_prefs"
        android:layout_below="@+id/btn_view"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/orange_button"
        android:padding="10dp"
        android:text="@string/prefs" />

</RelativeLayout>