<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >
    <RelativeLayout     
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/message_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

            <TextView 
                android:text="@string/message_scanned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView 
                android:text="@string/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:textStyle="bold"
                android:textSize="17sp"/>
            <TextView 
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:paddingBottom="10dp"
                android:textSize="15sp"/>
            <TextView 
                android:text="@string/encoded"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content" 
                android:textSize="17sp"/>
            <TextView 
                android:id="@+id/tv_encoded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" 
                android:textSize="15sp"/>
            <TextView 
                android:text="@string/decoded"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content" 
                android:textSize="17sp"/>
            <TextView 
                android:id="@+id/tv_decoded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:paddingBottom="10dp"
                android:textSize="15sp"/>
            <TextView 
                android:id="@+id/label_parity"
                android:text="@string/parity"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content" 
                android:textSize="17sp"/>
            <TextView 
                android:id="@+id/tv_parity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:paddingBottom="10dp"
                android:textSize="15sp"/>
            <TextView 
                android:text="@string/success"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content" 
                android:textSize="17sp"/>
            <TextView 
                android:id="@+id/tv_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:textSize="15sp"/>

            <TextView 
                android:id="@+id/tv_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:textSize="15sp"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>